# felwood

./: .gitignore  CMakeLists.txt
docs/: architecture.md  db-concepts.md  operators.md  persistence.md  server.md  sql.md  storage.md  table.md  type-system.md
docs/challenges/: 01-bulk-insert.md  02-aggregation.md  03-filtering.md  04-persistence.md  05-types.md  06-limits.md
docs/concepts/: db-concepts.md  doris.md  future-work.md
docs/impl/: architecture.md  operators.md  persistence.md  server.md  sql.md  table.md  type-system.md
src/: main.cpp
src/common/: column.hpp  types.hpp
src/operators/: aggregate.hpp  filter.hpp  operator.hpp  scan.hpp  sort.hpp
src/server/: mysql_proto.hpp  mysql_server.hpp
src/sql/: ast.hpp  lexer.hpp  parser.hpp  planner.hpp
src/storage/: catalog.hpp  segment_manager.hpp  table.hpp
tools/: felwood_segment.hexpat
